# agentic_project1

./: README.md  pyproject.toml  requirements.txt  tp1.ipynb
